Closed
Bug 1703502
Opened 5 years ago
Closed 5 years ago
Perma Android bustage widget/android/GfxInfo.cpp:678:62: error: function definition is not allowed here when Gecko 89 merges to Beta on 2021-04-19
Categories
(Core :: Graphics: WebRender, defect)
Core
Graphics: WebRender
Tracking
()
VERIFIED
FIXED
89 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox87 | --- | unaffected |
| firefox88 | --- | unaffected |
| firefox89 | --- | verified |
People
(Reporter: aryx, Assigned: aryx)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[task 2021-04-07T10:32:58.648Z] 10:32:58 INFO - In file included from Unified_cpp_widget_android0.cpp:83:
[task 2021-04-07T10:32:58.648Z] 10:32:58 ERROR - /builds/worker/checkouts/gecko/widget/android/GfxInfo.cpp:678:62: error: function definition is not allowed here
[task 2021-04-07T10:32:58.648Z] 10:32:58 INFO - static nsCString FeatureCacheOsVerPrefName(int32_t aFeature) {
[task 2021-04-07T10:32:58.648Z] 10:32:58 INFO - ^
| Assignee | ||
Comment 1•5 years ago
|
||
Curly brace got moved into ifdef block in bug 1803140
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/autoland/rev/74f2d9673c2d
move closing curly brace out of ifdef block to fix non-Nightly Android builds. r=emilio
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
| Assignee | ||
Comment 4•5 years ago
|
||
Verified fixed in today's central-as-beta simulation.
Status: RESOLVED → VERIFIED
Updated•5 years ago
|
tracking-firefox89:
? → ---
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•