Bug 1703502 - move closing curly brace out of ifdef block to fix non-Nightly Android builds. r=emilio

Curly brace got moved into ifdef block in bug 1803140

Differential Revision: https://phabricator.services.mozilla.com/D111077